[gd_scene load_steps=4 format=3 uid="uid://6nuqkgftmk54"]

[ext_resource type="Script" uid="uid://bntg7x3dkttay" path="res://Scripts/options.gd" id="1_m4ch3"]
[ext_resource type="Texture2D" uid="uid://sx2a70o16ygh" path="res://Assets/Sprites/OptionPanel.png" id="2_kdaex"]

[sub_resource type="PortableCompressedTexture2D" id="PortableCompressedTexture2D_kdaex"]

[node name="Options" type="Node"]
script = ExtResource("1_m4ch3")

[node name="BackGround" type="Sprite2D" parent="."]
z_index = 200
position = Vector2(5.00003, -17.5)
scale = Vector2(0.8375, 0.784259)
texture = ExtResource("2_kdaex")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Title" type="Label" parent="."]
z_index = 200
offset_left = -88.0
offset_top = -222.0
offset_right = 113.0
offset_bottom = -167.0
theme_override_font_sizes/font_size = 40
text = "OPCIONES"

[node name="Button" type="Button" parent="."]
z_index = 200
offset_left = -522.0
offset_top = -296.0
offset_right = -442.0
offset_bottom = -238.0

[node name="Volume" type="Node" parent="."]

[node name="VolumeSlider" type="HSlider" parent="Volume"]
z_index = 200
offset_left = -232.0
offset_top = -150.0
offset_right = 80.0
offset_bottom = -60.0
scale = Vector2(1.5, 3)

[node name="VolumeText" type="Label" parent="Volume"]
z_index = 200
offset_left = -97.0
offset_top = -124.0
offset_right = 97.0
offset_bottom = -43.0
theme_override_font_sizes/font_size = 36
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FullScreen" type="Node" parent="."]

[node name="FullScreenText" type="Label" parent="FullScreen"]
z_index = 200
offset_left = -18.0
offset_top = 53.0
offset_right = 182.0
offset_bottom = 166.0
theme_override_font_sizes/font_size = 40
text = "FullScreen
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CheckBox" type="CheckBox" parent="FullScreen"]
z_index = 200
offset_left = -103.0
offset_top = 41.0
offset_right = -79.0
offset_bottom = 67.0
scale = Vector2(3, 3)
button_pressed = true
icon = SubResource("PortableCompressedTexture2D_kdaex")
flat = true

[connection signal="button_up" from="Button" to="." method="GoBack"]
[connection signal="value_changed" from="Volume/VolumeSlider" to="." method="ChangeVolume"]
[connection signal="button_up" from="FullScreen/CheckBox" to="." method="FullScreen"]
